:responsive: fix home grid misalignment on mobile

--- a/src/app/new/explore.module.sass
+++ b/src/app/new/explore.module.sass
@@ -27,6 +27,9 @@
     transform: scale(1)
     animation: 1200ms variables.$bezier 0ms 1 normal grow
 
+    @media only screen and (max-width: variables.$breakpoint-mobile)
+      inset: variables.$unit
+
   .title
     align-self: center
     text-align: center
@@ -59,10 +62,7 @@
     &:before
       background: rgba(255, 255, 255, 0.2)
       transition: all 200ms variables.$bezier 0s
-      top: 0
-      left: 0
-      bottom: 0
-      right: 0
+      inset: 0
       border-radius: 0
 
     .title
