--- a/src/app/root.sass
+++ b/src/app/root.sass
@@ -6,13 +6,13 @@
   --columns: 19
   --rows: 12
   --scroll-y: 0px
-  --vertical-padding: variables.$unit * 3
+  --vertical-padding: 0.75rem * 3
 
   @media only screen and (max-width: variables.$breakpoint-tablet)
-    --vertical-padding: variables.$unit * 2
+    --vertical-padding: 0.75rem * 2
 
   @media only screen and (max-width: variables.$breakpoint-mobile)
-    --vertical-padding: variables.$unit
+    --vertical-padding: 0.75rem
 
 *
   margin: 0
